# daphne

./: build.sh
src/api/cli/: daphne.cpp
src/ir/daphneir/: DaphneOps.td
src/runtime/distributed/MPI/: CMakeLists.txt  MPIWorker.h  MPIWrapper.h  Makefile  main.cpp  mainMPI.cpp
src/runtime/distributed/coordinator/kernels/: DistributedWrapper.h
src/runtime/distributed/worker/: MPIWorker.h  WorkerImpl.cpp
src/runtime/local/datastructures/: CSRMatrix.h  DenseMatrix.cpp  DenseMatrix.h  Frame.h
src/runtime/local/io/: ReadCsv.h
src/runtime/local/kernels/: CMakeLists.txt  kernels.json
test/: CMakeLists.txt
test/runtime/distributed/worker/: MPITest.cpp  WorkerTest.cpp
